[package]
name = "progressive"
version = "0.1.0"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
license = "MIT"
description = "A highly configurable CLI progress bar."
repository = "https://github.com/jackboxx/progressive"
readme = "README.md"
keywords = ["progress-bar", "cli", "progress", "bar", "terminal"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.26.1"
