[package]
name = "progressed"
version = "0.2.1"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
license = "MIT"
description = "An easy to use and highly configurable library to show the progress of applications, calculations, ect."
repository = "https://github.com/jackboxx/progressed"
readme = "README.md"
keywords = ["progress-bar", "cli", "progress", "bar", "terminal"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.26.1"
